# libime

./: .clang-format  .codedocs  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  clang-format.sh  config.h.in
.github/workflows/: check.yml
cmake/: FindICU.cmake
data/: CMakeLists.txt  convert_open_gram_arpa.py  convert_open_gram_dict.py
src/: CMakeLists.txt
src/libime/: CMakeLists.txt  LibIMEConfig.cmake.in  common.h  constants.h  context.h  convert_open_gram_arpa.py  datrie.cpp  datrie.h  decoder.cpp  decoder.h  dictionary.cpp  dictionary.h  dynamictrie.h  dynamictrie_impl.h  dynamictriedictionary.cpp  dynamictriedictionary.h  historybigram.cpp  historybigram.h  hybridcontext.h  inputbuffer.cpp  inputbuffer.h  languagemodel.cpp  languagemodel.h  lattice.cpp  lattice.h  lattice_p.h  loudstrie.cpp  loudstrie.h  lrucache.h  naivevector.h  pinyincontext.cpp  pinyincontext.h  pinyindata.cpp  pinyindata.h  pinyindecoder.cpp  pinyindecoder.h  pinyindictionary.cpp  pinyindictionary.h  pinyinencoder.cpp  pinyinencoder.h  (+33 more)
src/libime/core/: CMakeLists.txt  LibIMECoreConfig.cmake.in  constants.h  datrie.cpp  datrie.h  decoder.cpp  decoder.h  dictionary.cpp  dictionary.h  endian_p.h  historybigram.cpp  historybigram.h  inputbuffer.cpp  inputbuffer.h  languagemodel.cpp  languagemodel.h  lattice.cpp  lattice.h  lattice_p.h  lrucache.h  naivevector.h  prediction.cpp  prediction.h  segmentgraph.cpp  segmentgraph.h  triedictionary.cpp  triedictionary.h  userlanguagemodel.cpp  userlanguagemodel.h  utils.cpp  utils.h  utils_p.h  zstd.h  zstdfilter.h
src/libime/pinyin/: CMakeLists.txt  LibIMEPinyinConfig.cmake.in  constants.h  pinyincontext.cpp  pinyincontext.h  pinyincorrectionprofile.cpp  pinyincorrectionprofile.h  pinyindata.cpp  pinyindata.h  pinyindata_p.h  pinyindecoder.cpp  pinyindecoder.h  pinyindecoder_p.h  pinyindictionary-text-format.md  pinyindictionary-text-format_zh.md  pinyindictionary.cpp  pinyindictionary.h  pinyinencoder.cpp  pinyinencoder.h  pinyinime.cpp  pinyinime.h  pinyinmatchstate.cpp  pinyinmatchstate.h  pinyinmatchstate_p.h  pinyinprediction.cpp  pinyinprediction.h  shuangpin-profile-format.md  shuangpin-profile-format_zh.md  shuangpindata.h  shuangpinprofile.cpp  shuangpinprofile.h
src/libime/table/: CMakeLists.txt  LibIMETableConfig.cmake.in  autophrasedict.cpp  autophrasedict.h  constants.h  log.cpp  log.h  table-text-format.md  table-text-format_zh.md  tablebaseddictionary.cpp  tablebaseddictionary.h  tablebaseddictionary_p.h  tablecontext.cpp  tablecontext.h  tabledecoder.cpp  tabledecoder.h  tabledecoder_p.h  tableime.cpp  tableime.h  tableoptions.cpp  tableoptions.h  tableparser.cpp  tableparser.h  tablerule.cpp  tablerule.h
src/libime/utf8/: checked.h  core.h  unchecked.h
test/: CMakeLists.txt  testautophrasedict.cpp  testdecoder.cpp  testdir.h.in  testhistorybigram.cpp  testinputbuffer.cpp  testmodel.cpp  testpinyincontext.cpp  testpinyindata.cpp  testpinyindictionary.cpp  testpinyinencoder.cpp  testpinyinime.cpp  testpinyinime_unit.cpp  testpinyinprediction.cpp  testprediction.cpp  testrawinput.cpp  testshuangpinprofile.cpp  testslm.cpp  testtable.cpp  testtableime.cpp  testtableime_unit.cpp  testtablerule.cpp  testtrie.cpp  testusermodel.cpp  testutils.h  triebench.cpp
tools/: CMakeLists.txt  filesystem_helper.cpp  filesystem_helper.h  libime_history.cpp  libime_migrate_fcitx4_pinyin.cpp  libime_migrate_fcitx4_table.cpp  libime_pinyindict.cpp  libime_prediction.cpp  libime_tabledict.cpp
